# spaceInvaders

./: CMakeLists.txt
spaceInavders_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  SPACE_INVADERS.vcxproj  SPACE_INVADERS.vcxproj.filters  Space_Invaders.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  copy_resources.vcxproj  copy_resources.vcxproj.filters
spaceInavders_build/lib/sfml/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  SFML.sln  SFMLSharedTargets.cmake  cmake_install.cmake
spaceInavders_build/lib/sfml/src/SFML/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
spaceInavders_build/lib/sfml/src/SFML/Audio/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  sfml-audio.vcxproj  sfml-audio.vcxproj.filters
spaceInavders_build/lib/sfml/src/SFML/Graphics/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  sfml-graphics.vcxproj  sfml-graphics.vcxproj.filters
spaceInavders_build/lib/sfml/src/SFML/Main/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  sfml-main.vcxproj  sfml-main.vcxproj.filters
spaceInavders_build/lib/sfml/src/SFML/Network/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  sfml-network.vcxproj  sfml-network.vcxproj.filters
spaceInavders_build/lib/sfml/src/SFML/System/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  sfml-system.vcxproj  sfml-system.vcxproj.filters
space_invaders/: main.cpp
(+5 files in other folders)
